@@ -10,6 +10,7 @@ import com.wireguard.external.wireguard.RepositoryPageable;
 import com.wireguard.external.wireguard.Specification;
 import com.wireguard.external.wireguard.WgTool;
 import com.wireguard.external.wireguard.peer.spec.FindByPublicKey;
+import lombok.SneakyThrows;
 import org.checkerframework.checker.index.qual.NonNegative;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -17,11 +18,15 @@ import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.locks.ReentrantLock;
+import java.util.stream.Collectors;
 
 @Component
 @ConditionalOnProperty(value = "wg.cache.enabled", havingValue = "true")
@@ -29,13 +34,16 @@ public class CachedWgPeerRepository extends WgPeerRepository implements Reposito
 
     private final Cache<String, WgPeer> wgPeerCache;
     private final ScheduledExecutorService cacheUpdateScheduler = Executors.newSingleThreadScheduledExecutor();
+    private final AtomicBoolean cacheUpdateInProgress = new AtomicBoolean(false);
+    private final ReentrantLock cacheReplacing = new ReentrantLock();
+    private ReentrantLock mutex = new ReentrantLock();
+    private final List<String> peersToDeleteAfterCacheUpdate = new LinkedList<>();
 
     @Autowired
     public CachedWgPeerRepository(WgTool wgTool, NetworkInterfaceData wgInterface, IV4SubnetSolver subnetSolver,
                                   @Value("${wg.cache.update-interval}") int cacheUpdateIntervalSeconds) {
         super(wgTool, wgInterface);
         wgPeerCache = Caffeine.newBuilder()
-                .expireAfterWrite(cacheUpdateIntervalSeconds+5, TimeUnit.SECONDS)
                 .build();
         cacheUpdateScheduler.scheduleAtFixedRate(() -> updateCache(subnetSolver),
                 0, cacheUpdateIntervalSeconds, TimeUnit.SECONDS);
@@ -49,10 +57,20 @@ public class CachedWgPeerRepository extends WgPeerRepository implements Reposito
         super.add(wgPeer);
     }
 
+    @SneakyThrows
     @Override
     public void remove(WgPeer wgPeer) {
+        cacheReplacing.lock();
+        mutex.lock();
         wgPeerCache.invalidate(wgPeer.getPublicKey());
+        mutex.unlock();
+        System.out.println("Removing peer from cache "+wgPeer.getPublicKey());
         super.remove(wgPeer);
+        if (cacheUpdateInProgress.get()){
+            peersToDeleteAfterCacheUpdate.add(wgPeer.getPublicKey());
+            System.out.println("added to delete list "+wgPeer.getPublicKey());
+        }
+        cacheReplacing.unlock();
     }
 
     @Override
@@ -82,24 +100,59 @@ public class CachedWgPeerRepository extends WgPeerRepository implements Reposito
     }
 
     private Optional<WgPeer> getFromCacheByPublicKey(String publicKey){
-        return Optional.ofNullable(wgPeerCache.getIfPresent(publicKey));
+        mutex.lock();
+        System.out.println("Getting peer from cache "+publicKey);
+        System.out.println("Cache size "+wgPeerCache.estimatedSize());
+        System.out.println("Cache state "+wgPeerCache.asMap().keySet().size());
+       // System.out.println("cache state "+wgPeerCache.asMap().keySet().stream().reduce("", (s, s2) -> s+" "+s2));
+        Optional<WgPeer> peer = Optional.ofNullable(wgPeerCache.getIfPresent(publicKey));
+        mutex.unlock();
+        return peer;
     }
 
+    @SneakyThrows
     synchronized private void updateCache(IV4SubnetSolver subnetSolver) {
+        System.out.println("Getting all peers");
+        cacheUpdateInProgress.set(true);
         List<WgPeer> newPeers = super.getAll();
-        synchronized (wgPeerCache) {
-            newPeers.forEach(wgPeer -> {
-                wgPeerCache.put(wgPeer.getPublicKey(), wgPeer);
-                wgPeer.getAllowedSubnets().getIPv4Subnets().stream()
-                        .filter(subnet -> !subnetSolver.isUsed(subnet))
-                        .forEach(subnetSolver::obtain);
-            });
-        }
+        System.out.println("Got all peers "+newPeers.stream().map(WgPeer::getPublicKey).reduce("", (s, s2) -> s+" "+s2));
+
+        Thread.sleep(1000);
+        System.out.println("Updating cache");
+        System.out.println(peersToDeleteAfterCacheUpdate.size() + " peers to no add");
+        cacheReplacing.lock();
+        newPeers.forEach(wgPeer -> {
+            //System.out.println(peersToDeleteAfterCacheUpdate);
+            if (peersToDeleteAfterCacheUpdate.contains(wgPeer.getPublicKey())){
+                peersToDeleteAfterCacheUpdate.remove(wgPeer.getPublicKey());
+                System.out.println("Peer "+wgPeer.getPublicKey()+" not added");
+                return;
+            }
+
+            wgPeerCache.put(wgPeer.getPublicKey(), wgPeer);
+            //System.out.println("a "+wgPeer.getPublicKey());
+            wgPeer.getAllowedSubnets().getIPv4Subnets().stream()
+                    .filter(subnet -> !subnetSolver.isUsed(subnet))
+                    .forEach(subnetSolver::obtain);
+        });
+        cacheReplacing.unlock();
+        System.out.println(peersToDeleteAfterCacheUpdate.size()+ " peers to no add");
+        cacheUpdateInProgress.set(false);
+        System.out.println("Cache updated");
+        peersToDeleteAfterCacheUpdate.clear();
     }
 
+    @SneakyThrows
     @Override
     public List<WgPeer> getAll() {
-        return wgPeerCache.asMap().values().stream().toList();
+        cacheReplacing.lock();
+        mutex.lock();
+        List<WgPeer> peers = wgPeerCache.asMap().values().stream().toList();
+       // System.out.println("getall: "+peers.stream().map(WgPeer::getPublicKey).collect(Collectors.toList()));
+        mutex.unlock();
+        cacheReplacing.unlock();
+        return peers;
+
     }
 
 }
